# llm-interactions-for-structured-outputs

./: .env.sample  .gitignore  LICENSE  README.md
administration/: runbook.md
backend/: README.md  __init__.py  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: ai_models.py  cities.py  continents.py  countries.py  glossary.py  health.py  router.py
backend/app/crud/: __init__.py  ai_model.py  city.py  continent.py  country.py  glossary.py
backend/app/db/: session.py
backend/app/models/: __init__.py  ai_model.py  city.py  continent.py  country.py  glossary.py
backend/app/schemas/: ai_model.py  city.py  continent.py  country.py  glossary.py  health.py
backend/tests/: __init__.py  conftest.py  test_ai_models.py  test_cities.py  test_continents.py  test_countries.py
backend/tests/api/: test_health.py
countries/: countries.csv  countries.xlsx  ~$countries.xlsx
database/: README.md  __init__.py  executor.py  pyproject.toml
database/sql/: __init__.py
database/sql/tables/: __init__.py  ai_model.py  ai_model_cleanup.sql  ai_model_create.sql  city.py  city_cleanup.sql  city_create.sql  continent.py  continent_alter_v1.sql  continent_alter_v1_rollback.sql  continent_cleanup.sql  continent_create.sql  country.py  country_alter.sql  country_alter_gdp_per_capita.sql  country_alter_gdp_per_capita_rollback.sql  country_alter_numeric_precision.sql  country_alter_ppp.sql  country_cleanup.sql  country_create.sql  country_rollback.sql  glossary.py  glossary_cleanup.sql  glossary_create.sql
database/tests/: test_ai_model.py  test_city.py  test_continent.py  test_country.py
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/llminteractions/llm_interactions_app/: MainActivity.kt
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/runner/: my_application.cc
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/test/: widget_test.dart
flutter_app/test/models/: city_test.dart  continent_test.dart  country_test.dart  glossary_entry_test.dart  health_response_test.dart
flutter_app/test/screens/: global_heatmaps_screen_test.dart  landing_screen_test.dart
flutter_app/test/utilities/: color_palette_test.dart  number_formatter_test.dart
flutter_app/test/widgets/: app_navigation_drawer_test.dart  breadcrumb_test.dart  city_safety_chart_test.dart  continent_carousel_test.dart  continent_cities_content_test.dart  continent_countries_panel_test.dart  continent_info_panel_test.dart  country_selector_test.dart  globe_fab_menu_test.dart  glossary_card_test.dart  glossary_content_test.dart  heatmap_attribute_dropdown_test.dart  heatmap_content_test.dart  heatmap_filters_test.dart  status_card_test.dart  travel_safety_content_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
glossary/: glossary.csv
llm-interaction-strategies/: llm-interaction-architecture.md  llm-interaction-idiosyncrasies.md  llm-interaction-nuances.md  llm-strategy-comparison.md
process_structured_output/: README.md  pyproject.toml
process_structured_output/src/process_structured_output/: __init__.py  cli.py  cli_all_countries_ai21.py  cli_all_countries_anthropic.py  cli_all_countries_cohere.py  cli_all_countries_deepseek.py  cli_all_countries_google.py  cli_all_countries_groq.py  cli_all_countries_mistral.py  cli_all_countries_openai.py  cli_country.py
process_structured_output/src/process_structured_output/db/: __init__.py  operations.py
process_structured_output/src/process_structured_output/models/: __init__.py  continent.py  country.py
process_structured_output/src/process_structured_output/prompts/: __init__.py  city_prompts.py  country_prompts.py
process_structured_output/src/process_structured_output/providers/: __init__.py  ai21_provider.py  anthropic_provider.py  cohere_provider.py  deepseek_provider.py  google_provider.py  groq_provider.py  mistral_provider.py  openai_provider.py
process_structured_output/tests/: __init__.py  test_ai21_provider.py  test_anthropic_provider.py  test_cli.py  test_cli_all_countries_ai21.py  test_cli_all_countries_anthropic.py  test_cli_all_countries_cohere.py  test_cli_all_countries_deepseek.py  test_cli_all_countries_google.py  test_cli_all_countries_groq.py  test_cli_all_countries_mistral.py  test_cli_all_countries_openai.py  test_cohere_provider.py  test_deepseek_provider.py  test_google_provider.py  test_groq_provider.py  test_mistral_provider.py  test_models.py  test_openai_provider.py
utilities/: __init__.py  color_palette.py  countries_info.py  glossary.py  pyproject.toml
utilities/tests/: test_color_palette.py  test_countries_info.py  test_glossary.py
