[project]
name = "process-structured-output"
version = "0.1.0"
description = "Process structured outputs from LLM providers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "google-genai>=0.1.0",
    "ai21>=3.0.0",
    "anthropic>=0.40.0",
    "cohere>=5.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "groq>=1.0.0",
    "mistralai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-psycopg2>=2.9.0",
]

[project.scripts]
continent-info = "process_structured_output.cli:main"
country-info = "process_structured_output.cli_country:main"
all-countries-ai21 = "process_structured_output.cli_all_countries_ai21:main"
all-countries-anthropic = "process_structured_output.cli_all_countries_anthropic:main"
all-countries-cohere = "process_structured_output.cli_all_countries_cohere:main"
all-countries-deepseek = "process_structured_output.cli_all_countries_deepseek:main"
all-countries-google = "process_structured_output.cli_all_countries_google:main"
all-countries-groq = "process_structured_output.cli_all_countries_groq:main"
all-countries-mistral = "process_structured_output.cli_all_countries_mistral:main"
all-countries-openai = "process_structured_output.cli_all_countries_openai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/process_structured_output"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "src"
namespace_packages = true
exclude = ["tests"]

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["psycopg2", "psycopg2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google", "google.genai", "google.genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ai21", "ai21.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["utilities", "utilities.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cohere", "cohere.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mistralai", "mistralai.*"]
ignore_missing_imports = true
